client/src/App.css
/* ... */
#user-name {
  color: rgb(85, 85, 124);
}
#profile-dot {
  animation: profile 1s ease-in-out 1 normal;
}
#no-stress {
  display: flex;
  align-items: center;
  padding: 10px;
  font-size: 17pt;
  border: 1px solid black;
  border-radius: 10px;
}
#no-stress span {
  color: lime;
  background-color: lime;
  opacity: .3;
  margin: 10px;
  border: 1px solid black;
}
.hl-blue {
  color: #3577CB;
}
.hl-blue:hover {
  cursor: pointer;
  color: #122947;
}
#basic-stats li:not(:nth-child(-n+2)) {
  margin: 6px;
}
.u-dots {
  color: #3577CB;
  letter-spacing: -5px;
}
.lil-stat {
  color: rgb(173, 173, 173);
}
#dot-barrier {
  grid-column: 1 / span 2;
  display: flex;
  justify-content: space-around;
  font-size: 25pt;
  margin-top: -10px;
  width: 100%;
}
#dot-barrier span:nth-child(1) { 
  animation: dot-barrier 1s ease-in-out 1 normal; 
}
#dot-barrier span:nth-child(2) { 
  animation: dot-barrier 2s ease-in-out 1 normal; 
}
#dot-barrier span:nth-child(3) { 
  animation: dot-barrier 3s ease-in-out 1 normal; 
}
#dot-barrier span:nth-child(4) { 
  animation: dot-barrier 4s ease-in-out 1 normal; 
}
#dot-barrier span:nth-child(5) { 
  animation: dot-barrier 5s ease-in-out 1 normal; 
}
#dot-barrier span:nth-child(6) { 
  animation: dot-barrier 6s ease-in-out 1 normal; 
}
#dot-barrier span:nth-child(7) { 
  animation: dot-barrier 7s ease-in-out 1 normal; 
}
#dot-barrier span:nth-child(8) { 
  animation: dot-barrier 8s ease-in-out 1 normal; 
}
#dot-barrier span:nth-child(9) { 
  animation: dot-barrier 9s ease-in-out 1 normal; 
}
#dot-barrier span:nth-child(10) { 
  animation: dot-barrier 10s ease-in-out 1 normal; 
}
#just-a-border {
  grid-column: 1 / span 2;
  height: 20px;
  width: 100%;
  border-bottom: 1px solid black;
  border-radius: 10px;
}
.mobile-friendly {
  display: none;
}
.menu-btn {
  display: none;
  position: relative;
  justify-content: center;
  align-items: center;
  width: 80px;
  height: 50px;
  cursor: pointer;
  transition: all .5s ease-in-out;
}
.menu-btn_burger {
  width: 25px;
  height: 6px;
  background: black;
  border-radius: 5px;
  transition: all .5s ease-in-out;
}

.menu-btn_burger::before,
.menu-btn_burger::after {
  content: '';
  position: absolute;
  width: 25px;
  height: 6px;
  background: black;
  border-radius: 5px;
  transition: all .5s ease-in-out;
}
.menu-btn_burger::before{
  transform: translateY(-10px);
}
.menu-btn_burger::after{
  transform: translateY(10px);
}
.menu-btn.open .menu-btn_burger {
  transform: translateX(-50px);
  background: transparent;
} 
.menu-btn.open .menu-btn_burger::before {
  transform: rotate(45deg) translate(35px, -35px);

} 
.menu-btn.open .menu-btn_burger::after {
  transform: rotate(-45deg) translate(35px, 35px);

} 
select {
  border: 0;
  background: transparent;
}
.category {
  position: relative;
  display: flex;
  height: 20px;
  border: 1px solid black;
  border-radius: 10px;
}
.options div input {
  background: rgb(219, 211, 211);
  border: 1px solid black;
}

.options div input:focus {
  background: transparent;
  outline: none !important;
  border:2px solid rgb(58, 57, 57);
  box-shadow: 0 0 10px rgb(0, 0, 0);
}
.d-modal {
  font-size: 40pt;
  z-index: 99;
}
.modal form input, textarea {
  border: 2px solid grey;
}
.modal form input:focus, textarea:focus {
  outline: none !important;
  border:2px solid rgb(58, 57, 57);
  box-shadow: 0 0 10px rgb(0, 0, 0);
}
.flip-text {
  display: flex;
  align-items: center;
  position: absolute;
  left: -63px;
 
  padding-left: 56px;
  width: 100px;
  font-weight: bold;
  opacity: .2;
  transform: rotate(-90deg);
}
.flip-text:hover {
  opacity: 5;
}
.add-api-hover:hover {
  border: 3px solid lime;
}

.book-memory {
  display: flex;
  justify-content: space-around;
}
.extra-opacity {
  position: absolute;
  bottom: -500px;
  height: 500px;
  width: 100vw;
  background-color: white;
}
.theme {
  position: absolute;
  top: 60px;
  opacity: .2;
  cursor: pointer;
}

.n-v {
  display: none;
}

.new-version {
  display: flex;
  flex-direction: column;
  text-align: center;
  border-bottom: 4px solid black;
  background-color: rgb(236, 255, 236);
  animation: version-update 1s ease-in-out 1 normal; 
  position: absolute;
  width: 100vw;
  z-index: 5;
  cursor: pointer;
}

.new-version h4 {
  margin: 0px;
}

.new-version-d {
  animation: version-update-d 1s ease-in-out 1 normal; 
}

.loading {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(212, 195, 195);
  opacity: .9;
  width: 100%;
  height: 100%;
}

.loader {
  border: 5px solid #645959; /* Light grey */
  border-top: 10px solid rgb(70, 69, 69); /* Blue */
  border-radius: 50%;
  width: 50px;
  height: 50px;
  animation: spin .5s linear infinite;
}

.m-stat {
  background-color: rgb(197, 167, 167);
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;

  width: 100vw;
  overflow-y: scroll;
}

.m-stat img {
  height: 70px;

}

.m-stat h6 {
  position: absolute;
  top: -30px;
}

.m-stat span:nth-child(1) {
  font-size: 18pt;
  width: 25px;
}

.p-value {
  position: absolute;
  margin-top: 85px;
  font-size: 10pt;
  height: inherit;
  width: 100px;
  color: black;
  text-align: center;
  line-height: 14px;
}

.m-stat li {
  display: flex;
  width: initial;
}

.m-stat ul {
  gap: 20px;
  padding: 0;
  width: initial;
}

.nav-block {
  display: none;
  position: fixed;
  background-color: black;
  z-index: 3;
  opacity: .5;
  height: 100%;
  width: 100vw;
  border: 1px solid black;
}

/* Keyframe Animations */

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}


@keyframes version-update-d {
  0% {
    
    height: 120px;
  }
  50% {
    text-indent: -9999px;
    height: 50px;
  }
  100% {
    text-indent: -9999px;
    height: 0px;
  }
}
/* ... */

